feat(#1059): implement species composition detail page (#1129)